--- a/index.html
+++ b/index.html
@@ -5,4 +5,11 @@
 <body>
 <h2 ALIGN=CENTER>Hello Everyone! How are you doing ? wipro technology </h2>
 </body>
+</html><html>
+<head>
+<title> DevOps </title>
+</head>
+<body>
+<h2 ALIGN=CENTER>Hello Everyone! How are you doing ? wipro technology </h2>
+</body>
 </html>
